# WAC4

./: .gitignore  README.md  Setup_WAC  macros
src/: CMakeCache.txt  CMakeLists.txt  Makefile  Setup_WAC  cmake_install.cmake
src/Base/: AACollisionGenerator.cpp  AACollisionGenerator.hpp  BaseLinkDef.h  BidimGaussFitConfiguration.cpp  BidimGaussFitConfiguration.hpp  BidimGaussFitResult.cpp  BidimGaussFitResult.hpp  BidimGaussFitter.cpp  BidimGaussFitter.hpp  CMakeLists.txt  CanvasCollection.cpp  CanvasCollection.hpp  CanvasConfiguration.cpp  ClosureTest.cpp  ClosureTest.hpp  Collection.hpp  CollisionGeometry.cpp  CollisionGeometry.hpp  CollisionGeometryAnalyzer.cpp  CollisionGeometryAnalyzer.hpp  CollisionGeometryConfiguration.cpp  CollisionGeometryConfiguration.hpp  CollisionGeometryGenerator.cpp  CollisionGeometryGenerator.hpp  CollisionGeometryGradientHistograms.cpp  CollisionGeometryGradientHistograms.hpp  CollisionGeometryHistograms.cpp  CollisionGeometryHistograms.hpp  CollisionGeometryMoments.cpp  CollisionGeometryMoments.hpp  DataGraph.cpp  DataGraph.hpp  DetectorFastSimulatorTask.cpp  DetectorFastSimulatorTask.hpp  Event.cpp  Event.hpp  EventCountHistos.cpp  EventCountHistos.hpp  EventFilter.cpp  EventFilter.hpp  (+148 more)
src/Blastwave/: BWModelConfiguration.cpp  BWModelConfiguration.hpp  BWModelEventGenerator.cpp  BWModelEventGenerator.hpp  CMakeLists.txt  Makefile  RunBWModelSimulation.cpp  cmake_install.cmake  libBlastwave.dylib  libBlastwave.rootmap  libBlastwave_rdict.pcm
src/HadronGas/: CMakeLists.txt  HadronGasConfiguration.cpp  HadronGasConfiguration.hpp  HadronGasGeneratorConfiguration.cpp  HadronGasGeneratorConfiguration.hpp  HadronGasGeneratorTask.cpp  HadronGasGeneratorTask.hpp  HadronGasHistograms.cpp  HadronGasHistograms.hpp  HadronGasLinkDef.h  HadronGasVsTempHistograms.cpp  HadronGasVsTempHistograms.hpp  Makefile  T180_0.root  cmake_install.cmake
src/Macros/: CalculateXsectSlices.C  HadronLevels.C  NGA_WoodsSaxon_rDensity  NuDynPlots.C  NuDynPlotsHardVsSoft.C  ParticlePlots.C  ParticleSubsampleAnalysis.C  PlotData.C  PlotFermiDirac.C  PlotGeometry.C  PlotGradients.C  PlotPythiaPtSpectraVsData.C  PlotPythiaResults.C  RadialBoost.root  RunCollisionGeometrySimulation.C  RunHadronGasSimulation.C  RunPythiaAnalysis.C  RunPythiaAnalysisAA.C  RunPythiaAnalysisCharm.C  RunPythiaAnalysisV2.C  loopdir.C
src/Macros/Book2/: BasicFunctions.C  RvsT.C
src/OldMacros/: GlobalPlots.C  PythiaAnalysisSingleParticleAliveV0.C  RunAACollisionPythiaSimulation.C  RunPythiaGenerator.C  RunPythiaGlobalObservables.C  RunPythiaSimulationNudyn.C  RunPythiaSimulationPtCorrelation.C  RunPythiaSimulationTwoParticles.C  TwoParticlePlots.C
src/StatStudies/: StatStudyPlots.cpp
src/WacPythia/: CMakeLists.txt  Makefile  PythiaConfiguration.cpp  PythiaConfiguration.hpp  PythiaEventGenerator.cpp  PythiaEventGenerator.hpp  PythiaEventReader.cpp  PythiaEventReader.hpp  WacPythiaLinkDef.h  cmake_install.cmake
